# claude-glasses

./: .gitignore  README.md  pyproject.toml
claude_glasses/: __init__.py  __main__.py  app.py  models.py  notifications.py  session_manager.py
