[project]
name = "claude-glasses"
version = "0.1.0"
description = "TUI monitor for Claude Code sessions"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.40.0",
    "rich>=13.0.0",
]

[project.scripts]
claude-glasses = "claude_glasses:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
